# serial-kinematics-cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md
debian/: changelog
include/serial-kinematics/: kinematic-chain.hpp  kinematics.hpp  transforms.hpp
src/: example-kinematics.cpp  example_kinematics.cpp  kinematic-chain.cpp  kinematics.cpp
tests/: kinematic-chain.cpp  kinematics.cpp
